<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Go back"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_car"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginStart="90dp"/>
    </LinearLayout>

    <!-- Name Input -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nom"
        android:textSize="16sp"
        android:textColor="#000000"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        app:hintEnabled="true"
        android:hint="@string/car_name">
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/spinner_border"

            android:inputType="text"
            android:contentDescription="Enter the car name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- License Plate Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="License plate number"
        android:textSize="16sp"
        android:textColor="#000000"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true"
        android:hint="@string/license_plate">

        <EditText
            android:id="@+id/licensePlateInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:background="@drawable/spinner_border"

            android:contentDescription="Enter the license plate number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Country Spinner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Country"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="3dp"
        />


    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/spinner_border"
    android:padding="8dp"
        android:contentDescription="Select the country"/>

    <!-- Green License Plate Switch -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_weight="1"
            android:text="Green license plate \n If you have an green license plate. Please turn on the switch."
            android:textColor="#000000"/>

        <Switch
            android:id="@+id/greenLicenseSwitch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Toggle green license plate option"
            android:checked="false" /> <!-- false signifie qu'il est désactivé au départ -->

    </LinearLayout>



    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:text="@string/save_car"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/purple_500"
        android:layout_marginBottom="16dp"/>

    <!-- Cancel Button -->
    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
       android:textColor="@color/black"
        android:layout_gravity="center"
        android:padding="8dp"/>
</LinearLayout>
